# fastapi-celery

./: pyproject.toml
src/: main.py
src/core/: config.py
src/database/: base.py  session.py
src/util/: driver.py
