[tool.poetry]
name = "fastapi-celery"
version = "0"
description = "FastAPI with Celery and Flower for Background Task"
authors = ["weekwith.me <leedobby@weekwith.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.1.2"
flower = "^1.0.0"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
alembic = "^1.7.4"
python-dotenv = "^0.19.1"
selenium = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
